--- a/style.css
+++ b/style.css
@@ -71,3 +71,16 @@ li {
     margin: 10px;
     font-size: large;
 }
+
+#rodape {
+    position: fixed;
+    width: 100%;
+    height: 5%;
+    bottom: 0;
+    left: 0;
+    padding: 0 0 10px 7px;
+    border-style: solid none none none;
+    border-width: 1px;
+    background-color: green;
+    opacity: 0.7;
+}
