--- a/style.css
+++ b/style.css
@@ -29,10 +29,9 @@ body {
 
 #cabecalho a {
   text-decoration: none;
-  color: rgb(76 , 164, 107);
+  color: rgb(76 , 164 , 107);
 }
 
-#licoes_aprendidas , 
-#licoes_a_aprender {
+#licoes_aprendidas , #licoes_a_aprender {
   line-height: 1.3;
 }
