--- a/style.css
+++ b/style.css
@@ -18,19 +18,28 @@ p{
 
 #cabecalho{
     margin: auto;
-    padding: 30px 490px;
-    background: rgb(134, 173, 95);
+    background: #0fa36b;
     position: fixed;
     top: 0px;
+    right: 0px;
+    left: 0px;
 }
 
 #menu li{
     display: inline-block;
-    padding-left: 30px;
+    padding-left: 15px;
+    padding-right: 10px;
+    font-weight: bolder;
+    color: rgb(253, 251, 251);
+}
+
+#menu a{
+    color: rgb(253, 251, 251);
 }
 
 #titulo{
     color: rgb(253, 251, 251);
+    padding-left: 30px;
 }
 
 #pagina-principal{
@@ -68,6 +77,7 @@ p{
     line-height: 13px;
     font-weight: bolder;
     margin-top: 130px;
+    margin-bottom: 130px;
 }
 
 #listas h2{
@@ -114,14 +124,20 @@ p{
 
 #lado-direito-tabela{
     width: 500px;
-    margin-right: 10%;
-    margin-top: 10px;
-    margin-left: 10%;
+    margin: 10px 10% 100px 10%;
 }
 
 #rodape{
-    margin-top: 10%;
-    background: rgb(134, 173, 95);
-    padding: 5px;
+    background: #0fa36b;
+    margin: auto;
+    color: rgb(253, 251, 251);
+    position: fixed;
+    bottom: 0px;
+    right: 0px;
+    left: 0px;
+    padding-left: 40px;
 }
 
+#rodape a{
+    color: rgb(253, 251, 251);
+}
