--- a/style.css
+++ b/style.css
@@ -4,62 +4,74 @@
   top: 0px;
   background-color: seagreen;
 }
+
 #titulo {
   margin: 15px 150px;
 }
+
 body {
-  background-color: rgb(253, 251, 251);
+  background-color: rgb(253 , 251 , 251);
 }
+
 #minha_foto {
   position: relative;
   width: 105px;
   top: 20px;
   left: 10px;
   border-radius: 0 50%;
-  border: 5px solid rgb(253, 251, 251);
+  border: 5px solid rgb(253 , 251 , 251);
 }
+
 #lista_conhecimento {
   display: block;
   background-color: seagreen;
 }
+
 #licoes_aprendidas {
   display: inline-block;
   float: left;
 }
+
 #licoes_a_aprender {
   display: inline-block;
   float: left;
 }
+
 #rodape {
   display: block;
   background-color: seagreen;
   position: fixed;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
   height: 2em;
 }
+
 #rodape h6 {
   margin-left: 3%;
   position: fixed;
-  bottom: 0px;
+  bottom: 0;
   background-color: royalblue;
 }
+
 nav {
   display: inline-block;
   background-color: seagreen;
   height: 30px;
   border-radius: 15px 15px 0 0;
 }
+
 #img_face {
   width: 25px;
+
 }
 #img_linkedin {
   width: 60px;
 }
+
 #img_github {
   width: 50px;
 }
+
 nav ul li {
   display: inline-block;
-  /* margin: 0 10px; */
 }
