--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  background: rgb(253, 251, 251);
-  font-family: sans-serif;
+  background: rgb(253 , 251 , 251);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 #cabecalho {
@@ -13,8 +13,8 @@ body {
   left: 0;
   top: 0;
   width: 100%;
-  background-color: rgb(230, 227, 227);
-  border-bottom: 1px solid rgb(177, 176, 176);
+  background-color: rgb(230 , 227 , 227);
+  border-bottom: 1px solid rgb(177 , 176 , 176);
   text-align: center;
   padding: 8px;
 }
@@ -29,7 +29,7 @@ body {
 
 #cabecalho a {
   text-decoration: none;
-  color: rgb(76, 164, 107);
+  color: rgb(76 , 164 , 107);
 }
 
 #licoes_aprendidas,
@@ -39,5 +39,5 @@ body {
 
 #licoes_aprendidas {
   float: left;
-  margin:  32px;
+  margin: 32px;
 }
