--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
 
 #cabecalho {
   position: fixed;
-  top: 0px;
+  top: 0;
 }
 
 #minha_foto {
-  margin-top: 6%;
+  margin-top: 16px;
   width: 30%;
 }
 
@@ -25,7 +25,8 @@ body {
   margin-top: 6%;
 }
 
-#navegacao li{
+#navegacao li {
   display: inline-block;
   margin-right: 30px;
+  
 }
