--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   border-bottom: 5px solid rgb(235 , 94 , 40);
   background-color: rgb(37 , 36 , 34);
   text-shadow: 3px 3px 7px black;
-  box-shadow: 0px 1px 15px black;
+  box-shadow: 0 1px 15px black;
 }
 
 #titulo {
@@ -23,9 +23,9 @@ body {
 }
 
 #nav-link {
-  margin-top: 0px;
+  margin-top: 0;
   margin-bottom: 10px;
-  margin-left: 20px;   
+  margin-left: 20px;
 }
 
 .icon {
@@ -37,25 +37,22 @@ body {
   padding-top: 125px;
 }
 
-#box {
-  display: inline-block;
-}
-
-#list-box {
-  display: inline-block;
-  margin-left: 50px;
-}
-
 #minha_foto {
+  float: left;
   padding: 1px;
   border: 10px solid rgb(235 , 94 , 40);
   border-radius: 25px;
   box-shadow: 1px 5px 13px black;
 }
 
+#content-box {
+  margin: 5px;
+  padding-bottom: 1px;
+  padding-left: 475px;
+}
+
 #table {
   margin-top: 20px;
-  margin-bottom: 110px;
   padding: 10px;
   font-size: 20px;
   border: 5px solid rgb(235 , 94 , 40);
@@ -63,24 +60,22 @@ body {
   box-shadow: 1px 5px 10px black;
 }
 
-#box2 {
-  display: inline;
-  float: left;
-}
-
-#box3 {
-  display: inline-block;
-  margin-left: 150px;
-}
-
 #artigo {
-  display: block;
+  display:inline-block;
+  max-width: 75%;
 }
 
-#secao {
-  padding: 5px;
+#aside {
+  display: inline-block;
+  max-width: 20%;
+  padding: 10px;
   border: 1px solid rgb(235 , 94 , 40);
   border-radius: 25px;
+}
+
+.box {
+  display: inline-block;
+  margin: 25px;
 }
 
 #sw {
@@ -100,7 +95,7 @@ body {
   color: rgb(204 , 197 , 185);
   font-weight: 800;
   text-shadow: 1px 1px 2px black;
-  box-shadow: 0px 1px 15px black;
+  box-shadow: 0 1px 15px black;
 }
 
 .highlight-word {
