--- a/style.css
+++ b/style.css
@@ -16,6 +16,12 @@ p{
     width: 50px;
 }
 
+.url_icone{
+    text-align: center;
+    color: black;
+    font-weight: bolder;
+}
+
 #cabecalho{
     margin: auto;
     background: #0fa36b;
@@ -50,7 +56,7 @@ p{
     border-radius: 50%;
     width: 300px;
     margin-left: 20%;
-    margin-top: 220px;
+    margin-top: 180px;
 }
 
 #sobre{
@@ -76,8 +82,7 @@ p{
     font-size:14px;
     line-height: 13px;
     font-weight: bolder;
-    margin-top: 130px;
-    margin-bottom: 130px;
+    margin-top: 120px;
 }
 
 #listas h2{
@@ -108,18 +113,18 @@ p{
     padding: 30px;
 }
 
-#lado-esquerdo{
+.lado-esquerdo{
     width: 500px;
     display: inline-block;
     margin-left: 10%;
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
-#lado-direito{
+.lado-direito{
     float: right;
     width: 400px;
     margin-right: 8%;
-    margin-top: 80px;
+    margin-top: 120px;
 }
 
 #lado-direito-tabela{
