--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
   background-color: rgb(253, 251, 251);
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  margin: 0px;
 }
 #cabecalho {
   position: fixed;
   top: 0px;
-  width: 98%;
+  width: 100%;
 }
 header {
   background-color: #32bf84;
@@ -18,6 +19,19 @@ header {
   font-size: 30px;
   text-align: center;
   letter-spacing: 2px;
+}
+nav a {
+  float: left;
+  color: white;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  padding: 14px 16px;
+  font-size: 18px;
+}
+nav a:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 10px;
 }
 
 #minha_foto {
