--- a/style.css
+++ b/style.css
@@ -33,11 +33,39 @@ body {
 }
 
 #conteudo-principal {
-    display: flex;
-    align-items: center;
-    padding: 15%;
+  padding: 10%;
+  max-width: 1633px;
 }
 
-#conteudo-principal .secao-texto img {
-    height: 200px;
+#conteudo-principal .secao {
+  position: relative;
+}
+
+#conteudo-principal .secao img {
+  height: 200px;
+  position: absolute;
+  top: 55px;
+}
+
+#conteudo-principal .secao #sobre_aprendizado {
+  background: linear-gradient(rgb( 1 , 110 , 71 ) , rgb( 0 , 163 , 103 ));
+  border-radius: 30px;
+  color: rgb( 255 , 255 , 255 );
+  display: inline-block;
+  padding: 30px;
+  margin-left: 170px;
+}
+
+#conteudo-principal .secao #sobre_aprendizado {
+  width: 588px;
+}
+
+#conteudo-principal .secao #sobre_aprendizado p {
+  margin-left: 10px;
+  text-align: justify;
+}
+
+.sub-titulo-article {
+  font-size: 1.2em;
+  line-height: 30px;
 }
