--- a/style.css
+++ b/style.css
@@ -36,7 +36,12 @@ nav a:hover {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 10px;
 }
-
+.centralizar {
+  justify-content: center;
+  display: flex;
+  flex-direction: initial;
+  align-items: center;
+}
 #minha_foto {
   align-items: center;
   margin-top: 150px;
