--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 }
 
 body {
-  background-color: rgb(253 ,251 ,251);
+  background-color: rgb(253,251,251);
 }
 
 #cabecalho {
-  background-color: rgb(4 ,130 ,67);
+  background-color: rgb(4,130,67);
   width: 100%;
   position: fixed;
   top: 0;
@@ -33,4 +33,10 @@ body {
 
 #licoes_aprendidas {
   margin-left: 20px;
+}
+
+#rodape {
+    background-color: rgb(202, 255, 251);
+    padding: 20px 0;
+    text-align: center;
 }
