--- a/style.css
+++ b/style.css
@@ -47,25 +47,72 @@ body {
   top: 55px;
 }
 
-#conteudo-principal .secao #sobre_aprendizado {
+#conteudo-principal .secao .artigo,
+#conteudo-principal .secao .passagem_trybe {
   background: linear-gradient(rgb( 1 , 110 , 71 ) , rgb( 0 , 163 , 103 ));
   border-radius: 30px;
-  color: rgb( 255 , 255 , 255 );
+  color: white;
   display: inline-block;
-  padding: 30px;
-  margin-left: 170px;
+  height: 300px;
 }
 
-#conteudo-principal .secao #sobre_aprendizado {
+#conteudo-principal .secao .sobre_aprendizado {
+  margin-left: 180px;  
   width: 588px;
+  padding: 19px;
 }
 
-#conteudo-principal .secao #sobre_aprendizado p {
+#conteudo-principal .secao .arame-base {
+  background-color: black;
+  height: 5px;
+  position: absolute;
+  width: 30px;
+  right: 295px;
+}
+
+#conteudo-principal .secao .arame-base::after, 
+#conteudo-principal .secao .arame-base::before {
+  content: '';
+  background-color: black;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  position: absolute;
+  top: -2px;
+}
+
+.arame-base::after {
+  right: -3px;
+}
+
+.arame-base::before {
+  left: -3px;
+}
+
+.arame-um {
+  top: 70px;
+}
+
+.arame-dois {
+  bottom: 70px;
+}
+
+#conteudo-principal .secao .sobre_aprendizado .text-artigo {
   margin-left: 10px;
-  text-align: justify;
 }
 
-.sub-titulo-article {
+#conteudo-principal .secao .passagem_trybe {
+  padding: 18px;
+  width: 250px;
+}
+
+/*global-classes*/
+
+.titulo-article {
   font-size: 1.2em;
   line-height: 30px;
+}
+
+.text-artigo {
+  text-align: justify;
 }
