--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  
+}
+
 #cabecalho {
   position: fixed;
   width: 100%;
@@ -48,12 +53,12 @@ body {
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 1em;
+  height: 2em;
 }
 
 #rodape h6 {
   margin-left: 3%;
-  /* position: fixed; */
+  position: fixed;
   bottom: 10px;
   background-color: rgb(132, 175, 132);
 }
