--- a/style.css
+++ b/style.css
@@ -7,89 +7,136 @@ body {
   font-weight: 400;
   line-height: 30px;
   font-family: Georgia, serif;
-  width: 90%;
-}
-
-footer , nav {
-  border-top: 1px gray solid;
 }
 
 #cabecalho {
   position: fixed;
   top: 0;
-  height: 70px;
+  height: 60px;
   background-color: lightgrey;
   font-size: 18px;
-  padding: 20px;
+  padding-top: 10px;
   margin: 0 auto;
   width: 100%;
   text-align: center;
   border-bottom: 1px gray solid;
-  z-index: 10;
-}
-
-li a {
-  text-decoration: none;
-  color: white;
-  padding: 17px;
-  line-height: 50px;
+  z-index: 15;
 }
 
 nav {
   background-color: grey;
   position: fixed;
-  top: 90px;
-  width: 100%;
-  height: 50px;
-  z-index: 11;
+  left: 0;
+  width: 185px;
+  height: 100%;
+  z-index: 9;
 }
 
 nav a:hover {
   background-color: darkgray;
 }
 
+#minha_foto {
+  padding: 2px;
+  background-color: black;
+  float: left;
+  display: inline-block;
+  margin-left: 20px;
+  margin-top: 150px;
+  z-index: 11;
+  border-radius: 20px;
+}
+
 nav ul li {
   display: inline-block;
-  margin-left: 15px;
-  margin-right: 15px;
   font-size: 17px;
+  line-height: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  width: 185px;
+  margin-left: 0;
 }
 
 nav ul {
-  text-align: center;
+  margin-left: 0;
+  margin-top: 350px;
+}
+
+li a {
+  text-decoration: none;
+  text-align: left;
+  color: white;
+  width: 180px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-left: 0;
 }
 
 main {
   position: relative;
-  top: 180px;
-  margin-left: 40px;
-  margin-right: 40px;
+  top: 110px;
+  margin-left: 240px;
+  margin-right: 10px;
 }
 
-#licoes_aprendidas , #licoes_a_aprender {
-  display: inline-block
+#sobre-mim {
+  margin-bottom: 20px;
+  line-height: 40px;
+}
+
+#bh {
+  font-size: 13px;
+}
+
+#licoes1 {
+  display: block;
+  float: right;
+  width: 210px;
+  margin-right: 0;
+  border-left: 1px solid grey;
+  padding-bottom: 20px;
+}
+
+h4 {
+  margin: 20px;
+}
+
+#licoes1 li {
+  
+}
+
+#licoes2 {
+  display: block;
+  float: right;
+  width: 80px;
+  margin-top: 400px;
+  margin-left: 20px;
+  margin-right: 0;
+  border-left: 1px solid grey;
 }
 
 footer {
   position: relative;
   bottom: 0;
-  top: 250px;
+  top: 200px;
   background-color: lightgray;
-  padding: 10px;
+  padding: 5px;
   width: 100vw;
+  z-index: 11;
 }
 
 table {
   border: 2px solid grey;
   text-align: center;
   font-size: 16px;
-  width: 850px;
+  width: 795px;
   height: 175px;
   margin-bottom: 5px;
 }
 
 tr td {
-  width: 200px;
+  width: 180px;
   height: 40px;
 }
 
@@ -105,26 +152,7 @@ tr td {
   border-right: 1px solid rgb(160 , 160 , 160);
 }
 
-#minha_foto {
-  padding: 3px;
-  background-color: black;
-  float: left;
-  display: inline-block;
-  margin-right:30px;
+footer , nav {
+  border-top: 1px gray solid;
 }
-
-#meu-nome {
-  font-size: 16px;
-  margin: 20px;
-  font-family: 'Roboto Condensed', sans-serif;
-}
-
-#tabela-conteudo {
-  float: right;
-  display: inline-block;
-}
-
-#fotoetabela {
-  width: 90%;
-  margin: auto;
-}
+  
