--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
   right: 295px;
 }
 
-#conteudo-principal .secao .arame-base:after, #conteudo-principal .secao .arame-base:before {
+#conteudo-principal .secao .arame-base:after,#conteudo-principal .secao .arame-base:before {
   content: '';
   background-color: black;
   border-radius: 50%;
@@ -109,6 +109,6 @@ body {
   line-height: 30px;
 }
 
-#conteudo-principal .secao .sobre_aprendizado .text-artigo, #conteudo-principal .secao .passagem_trybe .text-artigo {
+.sobre_aprendizado .text-artigo,.passagem_trybe .text-artigo {
   text-align: justify;
 }
