--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 article {
   width: 30%;
 }
@@ -14,7 +13,8 @@ body {
   height: 768px;
 }
 
-h1, h2 {
+h1,
+h2 {
   margin-top: 0;
   letter-spacing: 0;
   height: 40px;
@@ -36,14 +36,13 @@ main a {
   font-size: 1.3em;
   margin: 0;
   text-decoration: none;
-  
 }
 
 table {
   display: inline-block;
 }
 
-th , 
+th ,
 td {
   padding: 0 15px;
   border: 1px solid darkgray;
@@ -54,7 +53,7 @@ tr {
   display: inline;
 }
 
-ul{
+ul {
   margin: 0;
 }
 
@@ -65,14 +64,14 @@ ul{
   top: 0;
 }
 
-#licoes_aprendidas , 
+#licoes_aprendidas ,
 #licoes_a_aprender {
   margin: 2% 25%;
   text-align: justify;
 }
 
 #minha_foto {
-  box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: 2px 4px 8px 2px rgba(0,0,0,0.2);
   border-radius: 30px;
   margin-top: 15px;
   width: 220px;
@@ -96,7 +95,7 @@ ul{
 
 #titulo {
   background-color: rgb(33 , 148 , 33);
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
   text-align: center;
   width: 100%;
   max-width: 1366px;
@@ -110,7 +109,7 @@ ul{
 }
 
 .imgbox {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0 , 0 , 0 , 0.2);
   margin: 40px auto 0;
   padding: 0 55px;
   width: 60%;
@@ -118,9 +117,9 @@ ul{
   transition: 0.3s;
 }
 
-.lado-direito-int , 
+.lado-direito-int ,
 .lado-esquerdo {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0 , 0 , 0 , 0.2);
   display: inline-block;
   margin: 5px;
   padding: 5px 25px;
@@ -129,8 +128,18 @@ ul{
   transition: 0.3s;
 }
 
+.lado-direito {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  display: inline-block;
+  margin: 0 5px;
+  padding: 5px 25px;
+  text-align: justify;
+  transition: 0.3s;
+  width: 30%;
+}
+
 .licoes {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   display: inline-block;
   margin: 0 5px;
   padding: 5px 25px;
@@ -153,7 +162,7 @@ ul{
   color: rgb(31 , 31 , 31);
   text-decoration: none;
   display: inline;
-  padding: 0px 10px;
+  padding: 0 10px;
   margin: 0;
 }
 
@@ -163,20 +172,12 @@ ul{
   text-align: center;
 }
 
-.imgbox:hover , 
-.lado-direito:hover , 
-.lado-esquerdo:hover , 
+.imgbox:hover ,
+.lado-direito:hover ,
+.lado-esquerdo:hover ,
 .licoes:hover {
-  box-shadow: 0 6px 12px 0 rgba(0, 0, 0, 0.3);
-  background-color: rgba(23, 114, 29, 0.1);
+  box-shadow: 0 6px 12px 0 rgba(0,0,0,0.3);
+  background-color: rgba(23,114,29,0.1);
 }
 
-.lado-direito {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  display: inline-block;
-  margin: 0 5px;
-  padding: 5px 25px;
-  text-align: justify;
-  transition: 0.3s;
-  width: 30%;
-}
+
