--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ body {
   height: 768px;
 }
 
-h1,
-h2 {
+h1 , h2 {
   margin-top: 0;
   letter-spacing: 0;
   height: 40px;
@@ -42,8 +41,7 @@ table {
   display: inline-block;
 }
 
-th ,
-td {
+th , td {
   padding: 0 15px;
   border: 1px solid darkgray;
   background-color: whitesmoke;
@@ -64,14 +62,13 @@ ul {
   top: 0;
 }
 
-#licoes_aprendidas ,
-#licoes_a_aprender {
+#licoes_aprendidas , #licoes_a_aprender {
   margin: 2% 25%;
   text-align: justify;
 }
 
 #minha_foto {
-  box-shadow: 2px 4px 8px 2px rgba(0,0,0,0.2);
+  box-shadow: 2px 4px 8px 2px rgba(0 , 0 , 0 , 0.2);
   border-radius: 30px;
   margin-top: 15px;
   width: 220px;
@@ -95,7 +92,7 @@ ul {
 
 #titulo {
   background-color: rgb(33 , 148 , 33);
-  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
+  box-shadow: 0 0 10px 0 rgba(0 , 0 , 0 , 0.5);
   text-align: center;
   width: 100%;
   max-width: 1366px;
@@ -117,8 +114,7 @@ ul {
   transition: 0.3s;
 }
 
-.lado-direito-int ,
-.lado-esquerdo {
+.lado-direito-int , .lado-esquerdo {
   box-shadow: 0 4px 8px 0 rgba(0 , 0 , 0 , 0.2);
   display: inline-block;
   margin: 5px;
@@ -129,7 +125,7 @@ ul {
 }
 
 .lado-direito {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0 , 0 , 0 , 0.2);
   display: inline-block;
   margin: 0 5px;
   padding: 5px 25px;
@@ -139,7 +135,7 @@ ul {
 }
 
 .licoes {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0 , 0 , 0 , 0.2);
   display: inline-block;
   margin: 0 5px;
   padding: 5px 25px;
@@ -172,12 +168,9 @@ ul {
   text-align: center;
 }
 
-.imgbox:hover ,
-.lado-direito:hover ,
-.lado-esquerdo:hover ,
-.licoes:hover {
-  box-shadow: 0 6px 12px 0 rgba(0,0,0,0.3);
-  background-color: rgba(23,114,29,0.1);
+.imgbox:hover , .lado-direito:hover , .lado-esquerdo:hover , .licoes:hover {
+  box-shadow: 0 6px 12px 0 rgba(0 , 0 , 0 , 0.3);
+  background-color: rgba(23 , 114 , 29 , 0.1);
 }
 
 
