--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@ body {
   background-color: rgb(253 , 251 , 251);
 }
 
+#tabela {
+  background-color: teal;
+
+}
+
 #licoes_aprendidas {
   line-height: 20px;
   font-family: fantasy;
