--- a/style.css
+++ b/style.css
@@ -28,17 +28,18 @@ body {
 }
 
 #cabecalho {
-  background-color: teal;
-  text-align: left;
-  padding: 40px;
+  width: 100%;
+  background: teal;
+  text-align: start;
   top: 0;
   position: fixed;
+  padding: -10px;
 }
 
 #minha_foto {
   border-radius: 35%;
   width: 200px;
-  position: relative;
+
   display: block;
   top: 5px;
   margin: 1px;
