listas colocadas em uma div e alocadas uma ao lado da outra

--- a/style.css
+++ b/style.css
@@ -53,10 +53,10 @@ main {
 }
 
 .lado-esquerdo {
-       
+    display: inline-block;
 }
 .lado-direito {
-    
+    display: inline-block;
 }
 .artigo {
     background-color: yellow;
